opam-version: "2.0"
name: "fromager"
version: "0.4.0"
synopsis: "A CLI to format an ocaml codebase"
maintainer: "davidwong.crypto@gmail.com"
authors: "davidwong.crypto@gmail.com"
license: "Apache-2.0"
homepage: "https://github.com/mimoo/fromager"
bug-reports: "davidwong.crypto@gmail.com"
depends: [
  "ocaml" {>= "4.08"}
  "dune" {>= "2.8"}
  "otoml" {>= "0.9.2"}
  "core" {>= "v0.12.4"}
  "ocamlformat"
]
build: ["dune" "build" "-p" name "-j" jobs]
dev-repo: "git+https://github.com/mimoo/fromager.git"
